--- a/pom.xml
+++ b/pom.xml
@@ -1,48 +1,49 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.mvss</groupId>
-	<artifactId>karta</artifactId>
-	<version>0.1.0</version>
-	<name>Karta</name>
-	<description>Karta Test Automation Framework</description>
-	<packaging>pom</packaging>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.mvss</groupId>
+    <artifactId>karta</artifactId>
+    <version>0.1.1</version>
+    <name>Karta</name>
+    <description>Karta Test Automation Framework</description>
+    <packaging>pom</packaging>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>11</java.version>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<project.version>0.1.0</project.version>
-		<spring.boot.version>2.3.2.RELEASE</spring.boot.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>11</java.version>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <project.version>0.1.1</project.version>
+        <log4j2.version>2.15.0</log4j2.version>
+        <spring.boot.version>2.4.5</spring.boot.version>
+    </properties>
 
-	<modules>
-		<module>framework</module>
-		<module>server</module>
-		<module>samples</module>
-		<module>runtime</module>
-	</modules>
+    <modules>
+        <module>framework</module>
+        <module>server</module>
+        <module>samples</module>
+        <module>runtime</module>
+    </modules>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>${spring.boot.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<distributionManagement>
-		<repository>
-			<id>github</id>
-			<name>GitHub ManianVSS Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/ManianVSS/Karta</url>
-		</repository>
-	</distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub ManianVSS Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/ManianVSS/Karta</url>
+        </repository>
+    </distributionManagement>
 
 </project>
